--- a/septa-fare-calculator/package.json
+++ b/septa-fare-calculator/package.json
@@ -24,6 +24,7 @@
     "lint:fix": "npm-run-all prettier lint"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
